# rust-scholarmate-api

./: .env.example  .gitignore  .sequelizerc  Cargo.toml  README.md  app.js  package.json  scholarmate-api.postman_collection.json  sqlx-data.json  todo.txt
config/: app.config.js  auth.config.js  database.config.js
controllers/: auth.controller.js  university.controller.js
database/factories/: 20230210183740-seed-users.js  20230212383740-seed-universities.js
database/migrations/: 20230208160601-create-users.js  (+1 more)
examples/: build_csv.rs  build_excel.rs  connect_db.rs
export_results/: README.md
middleware/: index.js  jwt.middleware.js
migrations/: .gitignore  20230623115527_create_users_table.up.sql  20230623115816_create_universities_table.down.sql  20230623115816_create_universities_table.up.sql  20230623115958_create_students_table.down.sql  20230623115958_create_students_table.up.sql  20230623120054_create_scholarships_table.down.sql  20230623120054_create_scholarships_table.up.sql  20230623120127_create_forums_table.down.sql  20230623120127_create_forums_table.up.sql  20230623120217_create_applications_table.down.sql  20230623120217_create_applications_table.up.sql  20230707000852_create_translate_column_table.down.sql  20230707000852_create_translate_column_table.up.sql  20230712120741_create_tokens_table.down.sql  20230712120741_create_tokens_table.up.sql  20230714110339_create_rooms_table.down.sql  20230714110339_create_rooms_table.up.sql  20230714110341_create_chats_table.down.sql  20230714110341_create_chats_table.up.sql  README.md
models/: index.js  university.model.js  user.model.js
routes/: auth.js  index.js  university.js
src/: config.rs  lib.rs  main.rs  routes.rs  server.rs
src/lib/otp/: .gitignore  Cargo.toml
src/lib/otp/src/: lib.rs
src/lib/otp/src/enums/: error_enum.rs  mod.rs
src/lib/otp/src/helpers/: parse.rs
src/lib/otp/src/services/: hotp_service.rs  mod.rs  totp_service.rs
src/lib/otp/src/tests/: hotp.rs  mod.rs  totp.rs
src/lib/rate_limit/: Cargo.toml
src/lib/rate_limit/src/: lib.rs
src/lib/rate_limit/src/enums/: main_enum.rs  mod.rs
src/lib/rate_limit/src/middlewares/: mod.rs  ratelimit.rs
src/lib/rate_limit/src/structs/: main_struct.rs  memory_struct.rs  mod.rs
tests/: checker.rs  hashing.rs  parsing.rs  validation.rs
(+88 files in other folders)
