[package]
name = "otp"
version = "1.0.0"
authors = ["Sleepy4k <sarahpalastrin@gmail.com>"]
description = "Service for handle OTP"
edition = "2021"

[dependencies]
ascii = "1.0"
data-encoding = "2.1.2"
err-derive = "0.3.1"
ring = "0.16.9"
rand = "0.8.4"
regex = "1.4"

[dev-dependencies]
pretty_assertions = "1"