[package]
name = "rate_limit"
version = "1.0.0"
authors = ["Sleepy4k <sarahpalastrin@gmail.com>"]
description = "A rate limiter for Rust Actix Web applications."
edition = "2021"

[dependencies]
log = "0.4.11"
actix = "0.13.0"
actix-web = {version = "4.2.1"}
futures = "0.3.28"
failure = "0.1.8"
dashmap = "5.5.0"
serde_json = "1.0"